--- a/www/templates/__base__.html
+++ b/www/templates/__base__.html
@@ -36,8 +36,8 @@
                         </div>
                     </li>
                 {% else %}
-                    <li><a href="/signin"><i class="uk-icon-sign-in"></i> 登陆</a></li>
-                    <li><a href="/register"><i class="uk-icon-edit"></i> 注册</a></li>
+                    <li><a href="/signin"><i class="uk-icon-sign-in"></i>登陆{{ddd}}</a></li>
+                    <li><a href="/register"><i class="uk-icon-edit"></i>注册</a></li>
                 {% endif %}
                 </ul>
             </div>
