--- a/www/templates/__base__.html
+++ b/www/templates/__base__.html
@@ -28,7 +28,7 @@
                 <ul class="uk-navbar-nav">
                 {% if user %}
                     <li class="uk-parent" data-uk-dropdown>
-                        <a href="#0"><i class="uk-icon-user"></i> {{ user.name }}</a>
+                        <a href="#0"><i class="uk-icon-user"></i> {{ user.name }}===={{ddd}}</a>
                         <div class="uk-dropdown uk-dropdown-navbar">
                             <ul class="uk-nav uk-nav-navbar">
                                 <li><a href="/signout"><i class="uk-icon-sign-out"></i> 登出</a></li>
@@ -36,7 +36,7 @@
                         </div>
                     </li>
                 {% else %}
-                    <li><a href="/signin"><i class="uk-icon-sign-in"></i>登陆{{ddd}}</a></li>
+                    <li><a href="/signin"><i class="uk-icon-sign-in"></i>登xxxx陆{{ddd}}</a></li>
                     <li><a href="/register"><i class="uk-icon-edit"></i>注册</a></li>
                 {% endif %}
                 </ul>
